
pkginclude_HEADERS = \
    alpp.h \
    audiobase.h \
    audioconvert.h \
    audioenvironment.h \
    deviceupdater.h \
    error.h \
    groupsource.h \
    inputdevice.h \
    listener.h \
    positionedobject.h \
    sample.h \
    sounddata.h \
    source.h \
    sourcebase.h \
    stream.h \
    streamupdater.h \
    filestream.h \
    filestreamupdater.h \
    export.h \
    windowsstuff.h \
    config.h \
    referenced.h \
    ref_ptr.h

